--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "NODE_ENV='production' webpack -p",
+    "deploy": "npm run build && firebase deploy",
+    "firebase-init": "firebase login && firebase init"
   },
   "babel": {
     "presets": [
@@ -31,6 +33,8 @@
     "css-loader": "^0.28.2",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^7.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "firebase-tools": "^3.9.0",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.5",
